--- a/style.scss
+++ b/style.scss
@@ -3,7 +3,7 @@ $h2: #f1fa8c;
 $bg1: #6272a4;
 $bg2: #44475a;
 $bg3: #282a36;
-$text: #cccccc;
+$text: #eaeaea;
 
 $scale: #{1 + (-1px * -(1 + 0.00895)) / 1px};
 
