--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body header {
 }
 body header div {
   background-color: #6272a4;
-  color: #cccccc;
+  color: #eaeaea;
   position: absolute;
   padding: 2px;
 }
@@ -145,7 +145,7 @@ body section article h2 {
   font-size: 3em;
 }
 body section article .description {
-  color: #cccccc;
+  color: #eaeaea;
   grid-area: text;
   font-size: 1.5em;
   display: inline-block;
@@ -192,7 +192,7 @@ body section #studentcooking div.gallery img {
 }
 body footer {
   background-color: #282a36;
-  color: #cccccc;
+  color: #eaeaea;
   text-align: center;
 }
 
