--- a/style.css
+++ b/style.css
@@ -2,199 +2,160 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  border: 0;
-}
+  border: 0; }
 
 html, body {
   height: 100%;
-  scroll-behavior: smooth;
-}
+  scroll-behavior: smooth; }
 
 body {
-  font-family: "Roboto", sans-serif;
-}
-body a {
-  color: #f1fa8c;
-  text-decoration: none;
-}
-body main {
-  max-height: 100%;
-  overflow-x: hidden;
-  perspective: 1px;
-  perspective-origin: center top;
-}
-body header {
-  background-color: #282a36;
-  height: 100vh;
-  width: 100%;
-  transform-origin: center top;
-  transform: translateZ(-1px) scale(2.00895);
-}
-body header div {
-  background-color: #6272a4;
-  color: #eaeaea;
-  position: absolute;
-  padding: 2px;
-}
-body header div a {
-  color: #f1fa8c;
-}
-body header #H-left, body header #H-right, body header .T-bottom {
-  width: 250px;
-  height: 100vh;
-}
-body header #H-middle, body header #T-top {
-  height: 250px;
-  width: 60%;
-}
-body header #H-left {
-  left: 0;
-  top: 0;
-  z-index: 5;
-}
-body header #H-left img {
-  max-height: 200px;
-  margin: 25px 0 25px 30px;
-}
-body header #H-left a {
-  display: inline-block;
-  width: 100%;
-  text-align: center;
-  margin: 0 0 20px 0;
-  font-size: 1.6em;
-}
-body header #H-right {
-  left: 30%;
-  top: 0;
-}
-body header #H-right p {
-  position: absolute;
-  font-size: 1.2em;
-  bottom: 30px;
-  width: 100%;
-  text-align: center;
-}
-body header .T-bottom {
-  left: 69%;
-  top: 0;
-}
-body header .T-bottom #linksbutton {
-  display: none;
-}
-body header .T-bottom .links {
-  position: absolute;
-  bottom: 20px;
-}
-body header .T-bottom .links img {
-  width: calc((100% - 36px) / 4);
-  border: solid black 3px;
-  border-radius: 5px;
-  margin: 0 3px 0 3px;
-  padding: 3px;
-}
-body header .T-bottom .links img:hover {
-  background-color: #f1fa8c;
-  padding: 1px;
-}
-body header #H-middle {
-  top: 400px;
-  left: 0;
-  z-index: 4;
-}
-body header #H-middle p {
-  margin-left: 250px;
-  font-size: 1.6em;
-}
-body header #H-middle p span {
-  font-size: 1.8em;
-  color: #ffb86c;
-}
-body header #T-top {
-  z-index: 5;
-  top: 0;
-  left: 30%;
-  width: 70%;
-}
-body header #T-top h1 {
-  font-family: "PT Serif Caption", serif;
-  margin: 0;
-  line-height: 250px;
-  font-size: 13vw;
-  color: #ffb86c;
-}
-body section {
-  min-height: 200vh;
-  background: #44475a;
-  transform: translateZ(0);
-}
-body section article {
-  margin: 0 0 80px 0;
-  width: 100%;
-  padding: 10px;
-  background-color: #44475a;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-areas: "title title" "text pictures";
-}
-body section article:last-child {
-  margin: 0;
-}
-body section article h2 {
-  grid-area: title;
-  color: #ffb86c;
-  font-size: 3em;
-}
-body section article .description {
-  color: #eaeaea;
-  grid-area: text;
-  font-size: 1.5em;
-  display: inline-block;
-}
-body section article .description h3 {
-  margin: 10px 0 0 0;
-}
-body section article div.gallery {
-  grid-area: pictures;
-  display: inline-grid;
-  grid-template-columns: 1fr 1fr;
-  grid-gap: 10px;
-  grid-row-end: span 2;
-}
-body section article div.gallery img {
-  max-width: 100%;
-  float: none;
-  height: auto;
-}
-body section article div.gallery iframe {
-  grid-column-end: span 2;
-  width: 100%;
-  height: 100%;
-}
-body section article #listgallery {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-}
-body section article #listgallery h3 {
-  margin: 20px 0 0 0;
-  grid-row: 1;
-}
-body section article #listgallery h3:nth-child(7), body section article #listgallery h3:nth-child(5) {
-  grid-row: 3;
-}
-body section article #listgallery ul {
-  list-style: none;
-}
-body section #studentcooking div.gallery {
-  grid-template-columns: fit-content(50%) fit-content(50%) fit-content(50%);
-}
-body section #studentcooking div.gallery img {
-  max-height: 250px;
-}
-body footer {
-  background-color: #282a36;
-  color: #eaeaea;
-  text-align: center;
-}
+  font-family: 'Roboto', sans-serif; }
+  body a {
+    color: #f1fa8c;
+    text-decoration: none; }
+  body main {
+    max-height: 100%;
+    overflow-x: hidden;
+    perspective: 1px;
+    perspective-origin: center top; }
+  body header {
+    background-color: #282a36;
+    height: calc((100vw * 9)/16);
+    width: 100vw;
+    transform-origin: center top;
+    transform: translateZ(-1px) scale(2.00895); }
+    body header div {
+      background-color: #6272a4;
+      color: #eaeaea;
+      position: absolute;
+      padding: 2px; }
+      body header div a {
+        color: #f1fa8c; }
+    body header h1 {
+      font-family: 'PT Serif Caption', serif;
+      margin: 0;
+      padding-top: 8%;
+      font-size: 15vw;
+      color: #ce693a;
+      height: 100%;
+      width: 100%;
+      text-align: center;
+      position: absolute;
+      background-color: rgba(22, 25, 27, 0.9); }
+    body header p {
+      color: white;
+      font-size: 3vw;
+      text-align: center;
+      position: absolute;
+      width: 100vw;
+      left: 0;
+      margin-top: 25%;
+      padding: 0 5vw; }
+    body header #H-left, body header #H-right, body header .T-bottom {
+      width: 250px;
+      height: 100vh; }
+    body header #H-middle, body header #T-top {
+      height: 250px;
+      width: 60%; }
+    body header #H-left {
+      left: 0;
+      top: 0; }
+      body header #H-left img {
+        max-height: 200px;
+        margin: 25px 0 25px 30px; }
+      body header #H-left a {
+        display: inline-block;
+        width: 100%;
+        text-align: center;
+        margin: 0 0 20px 0;
+        font-size: 1.6em; }
+    body header #H-right {
+      left: 30%;
+      top: 0; }
+      body header #H-right p {
+        position: absolute;
+        font-size: 1.2em;
+        bottom: 30px;
+        width: 100%;
+        text-align: center; }
+    body header .T-bottom {
+      left: 69%;
+      top: 0; }
+      body header .T-bottom #linksbutton {
+        display: none; }
+      body header .T-bottom .links {
+        position: absolute;
+        bottom: 20px; }
+        body header .T-bottom .links img {
+          width: calc((100% - 36px) / 4);
+          border: solid #f1fa8c 3px;
+          border-radius: 5px;
+          margin: 0 3px 0 3px;
+          padding: 3px; }
+          body header .T-bottom .links img:hover {
+            background-color: #f1fa8c;
+            padding: 1px; }
+    body header #H-middle {
+      top: 400px;
+      left: 0; }
+    body header #T-top {
+      top: 0;
+      left: 30%;
+      width: 70%; }
+  body section {
+    min-height: 200vh;
+    background: #44475a;
+    transform: translateZ(0); }
+    body section article {
+      margin: 0 2% 80px 2%;
+      width: 96%;
+      padding: 10px;
+      background-color: #44475a;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-template-areas: "title title" "text pictures"; }
+      body section article:last-child {
+        margin: 0 2%; }
+      body section article h2 {
+        grid-area: title;
+        color: #ffb86c;
+        font-size: 3em; }
+      body section article .description {
+        color: #eaeaea;
+        grid-area: text;
+        font-size: 1.5em;
+        display: inline-block; }
+        body section article .description h3 {
+          margin: 10px 0 0 0; }
+      body section article div.gallery {
+        grid-area: pictures;
+        grid-template-columns: 1fr 1fr;
+        grid-gap: 10px;
+        grid-row-end: span 2; }
+        body section article div.gallery img {
+          max-width: 100%;
+          float: none;
+          height: auto; }
+        body section article div.gallery iframe {
+          grid-column-end: span 2;
+          width: 100%;
+          height: 100%; }
+      body section article #listgallery {
+        display: grid;
+        grid-template-columns: 1fr 1fr; }
+        body section article #listgallery h3 {
+          margin: 20px 0 0 0;
+          grid-row: 1; }
+          body section article #listgallery h3:nth-child(7), body section article #listgallery h3:nth-child(5) {
+            grid-row: 3; }
+        body section article #listgallery ul {
+          list-style: none; }
+    body section #studentcooking div.gallery {
+      grid-template-columns: fit-content(50%) fit-content(50%) fit-content(50%); }
+  body footer {
+    background-color: #282a36;
+    color: #eaeaea;
+    text-align: center; }
 
 #scroll {
   position: fixed;
@@ -208,8 +169,7 @@ body footer {
   display: none;
   -webkit-border-radius: 60px;
   -moz-border-radius: 60px;
-  border-radius: 5px;
-}
+  border-radius: 5px; }
 
 #scroll span {
   position: absolute;
@@ -220,83 +180,64 @@ body footer {
   height: 0;
   width: 0;
   border: 8px solid transparent;
-  border-bottom-color: #ffffff;
-}
+  border-bottom-color: #ffffff; }
 
 @media only screen and (max-width: 1600px) {
   body header #H-middle p {
-    font-size: 1.5em;
-  }
-}
+    font-size: 1.5em; } }
 @media only screen and (max-width: 1330px) {
   body section article {
     grid-template-columns: 1fr;
-    grid-template-areas: "title" "text" "pictures";
-  }
-  body section article div.gallery {
-    grid-template-columns: 1fr;
-  }
-  body section article#lists iframe {
-    height: 500px;
-  }
-  body section article h2 {
-    font-size: 2.2em;
-  }
-  body section article .description {
-    font-size: 1.4em;
-  }
+    grid-template-areas: "title" "text" "pictures"; }
+    body section article div.gallery {
+      grid-template-columns: 1fr; }
+    body section article#lists iframe {
+      height: 500px; }
+    body section article h2 {
+      font-size: 2.2em; }
+    body section article .description {
+      font-size: 1.4em; }
 
   body section #studentcooking div.gallery {
-    grid-template-columns: 1fr;
-  }
-  body section #studentcooking div.gallery img {
-    max-height: none;
-  }
+    grid-template-columns: 1fr; }
+    body section #studentcooking div.gallery img {
+      max-height: none; }
 
   body header #H-left, body header #H-middle, body header #T-top, body header .T-bottom {
     padding: 0 100px 0 100px;
     position: relative;
     width: 100%;
     height: auto;
-    left: 0;
-  }
+    left: 0; }
   body header #H-left {
-    text-align: center;
-  }
-  body header #H-left img {
-    display: none;
-  }
-  body header #H-left a {
-    margin: 5px 10px 0 0;
-    padding: 1px 5px 1px 5px;
-    width: auto;
-  }
+    text-align: center; }
+    body header #H-left img {
+      display: none; }
+    body header #H-left a {
+      margin: 5px 10px 0 0;
+      padding: 1px 5px 1px 5px;
+      width: auto; }
   body header .T-bottom {
     margin: 40px 0 0 0;
     padding: 5px 0;
-    text-align: center;
-  }
-  body header .T-bottom #linksbutton {
-    display: inline-block;
-    border: 1px solid #f1fa8c;
-    padding: 1px 5px 1px 5px;
-    background-color: #6272a4;
-    color: #f1fa8c;
-    font-size: 2em;
-  }
-  body header .T-bottom .links {
-    display: none;
-  }
-  body header .T-bottom .linkspage {
-    display: block;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    z-index: 8;
-    padding: 80px 5px 0 5px;
-  }
+    text-align: center; }
+    body header .T-bottom #linksbutton {
+      display: inline-block;
+      border: 1px solid #f1fa8c;
+      padding: 1px 5px 1px 5px;
+      background-color: #6272a4;
+      color: #f1fa8c;
+      font-size: 2em; }
+    body header .T-bottom .links {
+      display: none; }
+    body header .T-bottom .linkspage {
+      display: block;
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      padding: 80px 5px 0 5px; }
   body header .linkspage {
     margin: 0;
     display: block;
@@ -304,86 +245,151 @@ body footer {
     width: 100%;
     height: 100%;
     top: 0;
-    left: 0;
-    z-index: 8;
-  }
-  body header .linkspage #linksbutton {
-    position: absolute;
-    top: 5px;
-    width: calc(100% - 10px);
-    left: 0;
-    margin: 0 5px 0 5px;
-    z-index: 10;
-  }
-  body header .linkspage #linksbutton:before {
-    content: "close ";
-  }
+    left: 0; }
+    body header .linkspage #linksbutton {
+      position: absolute;
+      top: 5px;
+      width: calc(100% - 10px);
+      left: 0;
+      margin: 0 5px 0 5px; }
+      body header .linkspage #linksbutton:before {
+        content: "close "; }
   body header #H-middle {
-    top: auto;
-  }
-  body header #H-middle p {
-    margin: 0;
-    padding: 0 5px 0 5px;
-  }
+    top: auto; }
+    body header #H-middle p {
+      margin: 0;
+      padding: 0 5px 0 5px; }
   body header #H-right {
     top: auto;
     width: 100%;
     height: auto;
     left: 0;
-    bottom: 0;
-  }
-  body header #H-right p {
-    position: relative;
-    padding: 0 0 5px 0;
-    bottom: auto;
-    width: 100%;
-  }
+    bottom: 0; }
+    body header #H-right p {
+      position: relative;
+      padding: 0 0 5px 0;
+      bottom: auto;
+      width: 100%; }
   body header #T-top h1 {
     text-align: center;
     line-height: normal;
     font-size: 14vw;
-    padding: 0;
-  }
-}
+    padding: 0; } }
 @media only screen and (max-width: 850px) {
   body header #H-left, body header #H-middle, body header #T-top, body header .T-bottom {
-    padding: 0 5px;
-  }
+    padding: 0 5px; }
   body header #T-top h1 {
-    font-size: 19vw;
-  }
+    font-size: 19vw; }
   body header .T-bottom {
-    margin: 5px 0 0 0;
-  }
-}
+    margin: 5px 0 0 0; } }
 @media only screen and (max-width: 400px) {
   body header #H-left a {
     font-size: 1.3em;
-    margin: 5px 0 0 0;
-  }
+    margin: 5px 0 0 0; }
   body header #H-middle p {
-    font-size: 1.3em;
-  }
-  body header #H-middle p span {
-    font-size: 1.4em;
-  }
+    font-size: 1.3em; }
+    body header #H-middle p span {
+      font-size: 1.4em; }
   body header .T-bottom #linksbutton {
-    font-size: 1.4em;
-  }
+    font-size: 1.4em; }
   body section article {
-    margin: 0 0 40px 0;
-  }
-  body section article .description {
-    font-size: 1.2em;
-  }
-  body section article h2 {
-    font-size: 1.8em;
-  }
+    margin: 0 0 40px 0; }
+    body section article .description {
+      font-size: 1.2em; }
+    body section article h2 {
+      font-size: 1.8em; }
 
   #scroll {
     width: 40px;
-    height: 40px;
-  }
-}
+    height: 40px; } }
+.gallery {
+  /* Slideshow container */
+  /* Next & previous buttons */
+  /* Position the "next button" to the right */
+  /* On hover, add a black background color with a little bit see-through */
+  /* Caption text */
+  /* Number text (1/3 etc) */
+  /* The dots/bullets/indicators */
+  /* Fading animation */ }
+  .gallery .mySlides {
+    display: none; }
+  .gallery img {
+    vertical-align: middle; }
+  .gallery .slideshow-container {
+    max-width: 1000px;
+    position: relative;
+    margin: auto;
+    height: 500px;
+    overflow: visible; }
+  .gallery .mySlides {
+    overflow: hidden;
+    max-height: 100%; }
+    .gallery .mySlides img {
+      width: 100%; }
+  .gallery .prev,
+  .gallery .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    left: -50px;
+    width: auto;
+    padding: 16px;
+    margin-top: -22px;
+    color: black;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none; }
+  .gallery .next {
+    left: unset;
+    right: -50px;
+    border-radius: 3px 0 0 3px; }
+  .gallery .prev:hover,
+  .gallery .next:hover {
+    background-color: rgba(0, 0, 0, 0.8); }
+  .gallery .text {
+    color: #f2f2f2;
+    font-size: 15px;
+    padding: 8px 12px;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    height: 20%;
+    background-color: rgba(65, 65, 70, 0.6); }
+  .gallery .numbertext {
+    color: black;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0; }
+  .gallery .dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease; }
+  .gallery .active,
+  .gallery .dot:hover {
+    background-color: black; }
+  .gallery .fade {
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1.5s;
+    animation-name: fade;
+    animation-duration: 1.5s; }
+@-webkit-keyframes fade {
+  from {
+    opacity: 0.4; }
+  to {
+    opacity: 1; } }
+@keyframes fade {
+  from {
+    opacity: 0.4; }
+  to {
+    opacity: 1; } }
 
 /*# sourceMappingURL=style.css.map */
