--- a/style.scss
+++ b/style.scss
@@ -24,8 +24,8 @@ body {
 	}
 	header{
 		background-color: $bg3;
-		height:100vh;
-		width: 100%;
+		height: calc((100vw * 9)/16);
+		width: 100vw;
 		transform-origin: center top;
 		transform: translateZ(-1px) scale($scale);
 		div {
@@ -37,6 +37,28 @@ body {
 				color: $h2;
 			}
 		}
+
+		h1 {
+				font-family: 'PT Serif Caption', serif;
+				margin:0;
+				padding-top: 8%;
+				font-size: 15vw;
+				color: #ce693a;
+				height: 100%;
+				width: 100%;
+				text-align: center;
+				position: absolute;
+				background-color: rgba(22, 25, 27, 0.9);		}
+				p {
+					color: white;
+				font-size: 3vw;
+				text-align: center;
+				position: absolute;
+				width: 100vw;
+				left: 0;
+				margin-top: 25%;
+				padding: 0 5vw;
+			}
 		#H-left, #H-right, .T-bottom {
 			width: 250px;
 			height: 100vh;
@@ -48,8 +70,7 @@ body {
 		#H-left {
 			left:0;
 			top:0;
-			z-index: 5;
-			img {
+						img {
 				max-height: 200px;
 				margin: 25px 0 25px 30px;
 			}
@@ -86,7 +107,7 @@ body {
 				bottom: 20px;
 				img {
 					width: calc((100% - 36px) / 4);
-					border: solid black 3px;
+					border: solid $h2 3px;
 					border-radius: 5px;
 					margin: 0 3px 0 3px;
 					padding: 3px;
@@ -100,28 +121,13 @@ body {
 		#H-middle {
 			top: 400px;
 			left:0;
-			z-index: 4;
-			p {
-				margin-left: 250px;
-				font-size: 1.6em;
-				span {
-					font-size: 1.8em;
-					color: $h1;
-				}
-			}
+						
 		}
 		#T-top {
-			z-index: 5;
-			top:0;
+						top:0;
 			left:30%;
 			width: 70%;
-			h1 {
-				font-family: 'PT Serif Caption', serif;
-				margin:0;
-				line-height: 250px;
-				font-size: 13vw;
-				color: $h1;
-			}
+			
 		}
 	}
 	section {
@@ -130,8 +136,8 @@ body {
 		transform: translateZ(0);
 
 		article {
-			margin: 0 0 80px 0;
-			width: 100%;
+			margin: 0 2% 80px 2%;
+			width: 96%;
 			padding: 10px;
 			background-color: $bg2;
 			display: grid;
@@ -141,7 +147,7 @@ body {
 			"text pictures"
 			;
 			&:last-child {
-				margin: 0;
+				margin: 0 2%;
 			}
 			h2 {
 				grid-area:title;
@@ -159,7 +165,6 @@ body {
 			}
 			div.gallery {
 				grid-area:pictures;
-				display: inline-grid;
 				grid-template-columns: 1fr 1fr;
 				grid-gap: 10px;
 				grid-row-end: span 2;
@@ -192,9 +197,7 @@ body {
 		}
 		#studentcooking div.gallery {
 			grid-template-columns: fit-content(50%) fit-content(50%) fit-content(50%);
-			img {
-				max-height: 250px;
-			}
+			
 		}
 	}
 	footer {
@@ -308,8 +311,7 @@ body {
 				height: 100%;
 				top: 0;
 				left: 0;
-				z-index: 8;
-				padding: 80px 5px 0 5px;
+								padding: 80px 5px 0 5px;
 			}
 		}
 		.linkspage {
@@ -320,14 +322,13 @@ body {
 			height: 100%;
 			top: 0;
 			left: 0;
-			z-index: 8;
-			#linksbutton {
+						#linksbutton {
 				position: absolute;
 				top: 5px;
 				width: calc(100% - 10px);
 				left: 0;
 				margin: 0 5px 0 5px;
-				z-index: 10;
+				
 				&:before {
 					content: "close ";
 				}
@@ -419,4 +420,127 @@ h2 {
 	width: 40px;
 	height: 40px;
 }
+}
+
+
+.gallery {
+
+.mySlides {
+	display: none;
+}
+img {
+	vertical-align: middle;
+}
+
+/* Slideshow container */
+.slideshow-container {
+	max-width: 1000px;
+	position: relative;
+	margin: auto;
+	height: 500px;
+	overflow: visible;
+}
+.mySlides {
+	overflow: hidden;
+	max-height: 100%;
+	img {
+		width: 100%;
+	}
+}
+/* Next & previous buttons */
+.prev,
+.next {
+	cursor: pointer;
+	position: absolute;
+	top: 50%;
+	left: -50px;
+	width: auto;
+	padding: 16px;
+	margin-top: -22px;
+	color: black;
+	font-weight: bold;
+	font-size: 18px;
+	transition: 0.6s ease;
+	border-radius: 0 3px 3px 0;
+	user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+	left: unset;
+	right: -50px;
+	border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover,
+.next:hover {
+	background-color: rgba(0, 0, 0, 0.8);
+}
+
+/* Caption text */
+.text {
+	color: #f2f2f2;
+	font-size: 15px;
+	padding: 8px 12px;
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	text-align: center;
+	height: 20%;
+	background-color: rgba(65, 65, 70, 0.6);
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+	color: black;
+	font-size: 12px;
+	padding: 8px 12px;
+	position: absolute;
+	top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+	cursor: pointer;
+	height: 15px;
+	width: 15px;
+	margin: 0 2px;
+	background-color: #bbb;
+	border-radius: 50%;
+	display: inline-block;
+	transition: background-color 0.6s ease;
+}
+
+.active,
+.dot:hover {
+	background-color: black;
+}
+
+/* Fading animation */
+.fade {
+	-webkit-animation-name: fade;
+	-webkit-animation-duration: 1.5s;
+	animation-name: fade;
+	animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+	from {
+		opacity: 0.4;
+	}
+	to {
+		opacity: 1;
+	}
+}
+
+@keyframes fade {
+	from {
+		opacity: 0.4;
+	}
+	to {
+		opacity: 1;
+	}
+}
+
 }
